fix: display stats vertically on mobile viewport

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -534,7 +534,7 @@ footer {
   }
 
   .stats {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
   }
 
   .release-header {
